@@ -1,3 +1,8 @@
+2010-07-15  Simon South  <ssouth@localhost.localdomain>
+
+	* progmodes/delphi.el (delphi-previous-indent-of): Indent case
+	blocks within record declarations (i.e. variant parts) correctly.
+
 2010-07-15  Simon South  <ssouth@member.fsf.org>
 
 	* progmodes/delphi.el (delphi-token-at): Give newlines precedence
